configFiles/kubernetes/tomcat/tomcat_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat
spec:
  type: NodePort
  ports:
  - port: 8080
    name: httpport
  - port: 8443
    name: httpsport
  selector:
    app: auction
    tier: app
    impl: tomcat
