configFiles/kubernetes/tomcat/tomcat_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat
spec:
  rules:
  - host: www.weathervane
    http:
      paths:
      - path: /
        backend:
          serviceName: tomcat
          servicePort: 8080
